# spark-man

./: .gitignore  PLAN.md  README.md
.github/workflows/: ci.yml
notes/: agent-frameworks-comparison.md  pydantic-ai-architecture.md
src/: pyproject.toml
src/claude_man/: __init__.py  cli.py  config.py  db.py  dispatcher.py  preview.py  source_github.py  source_github_common.py  source_github_webhook.py  subscribe.py  tool_gh_config.py  tool_list.py  tool_mark.py  tool_show.py  tool_sub_add.py  tool_sub_list.py  tool_sub_remove.py  worker.py  worker_common.py  worker_tui.py
src/tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_preview.py  test_source_github_common.py  test_subscribe.py  test_worker_common.py
templates/default/: CLAUDE.md.template  hook_check_new.py.template  prompt_new_message.md.template  settings.json.template
templates/gh-dev/: CLAUDE.md.template  prompt_new_message.md.template  settings.json.template
