[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-man"
version = "0.1.0"
description = "Claude Code 消息编排系统"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]
authors = [
    {name = "toby"},
]

[project.scripts]
claude-man = "claude_man.cli:main"
claude-man-worker = "claude_man.worker:main"
claude-man-msg-list = "claude_man.tool_list:main"
claude-man-msg-show = "claude_man.tool_show:main"
claude-man-msg-mark = "claude_man.tool_mark:main"
claude-man-sub-list = "claude_man.tool_sub_list:main"
claude-man-sub-add = "claude_man.tool_sub_add:main"
claude-man-sub-remove = "claude_man.tool_sub_remove:main"
claude-man-source-github = "claude_man.source_github:cli_main"
claude-man-source-github-webhook = "claude_man.source_github_webhook:cli_main"
claude-man-worker-tui = "claude_man.worker_tui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_man*"]
